--- a/.github/workflows/update_components.yml
+++ b/.github/workflows/update_components.yml
@@ -17,46 +17,88 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq
 
-      - name: Get Latest PowerShell Version
-        id: get-latest-powershell-version
+      - name: Get Latest Docker Compose
+        id: get-latest-docker-compose-version
         run: |
-          versionPowershell=$(curl -s "https://api.github.com/repos/PowerShell/PowerShell/releases" | jq -r '.[1] | select(.prerelease == false) | .tag_name' | sed 's/^v//')
-          echo "::set-output name=versionPowershell::versionPowershell=\"$version\""
+          version=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r '.tag_name' | cut -c 2-)
+          echo "versionDockerCompose=$version" >> $GITHUB_OUTPUT
+
+      - name: Get Latest Golang Version
+        id: get-latest-golang-version
+        run: |
+          version=$(curl -sSL https://golang.org/VERSION?m=text | cut -c 3-)
+          echo "versionGolang=$version" >> $GITHUB_OUTPUT
+
+      - name: Get Latest Kubectl Version
+        id: get-latest-versionKubectl-version
+        run: |
+          version=$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt | cut -d 'v' -f 2)
+          echo "versionKubectl=$version" >> $GITHUB_OUTPUT
 
       - name: Get Latest Packer Version
         id: get-latest-packer-version
         run: |
           version=$(curl -s "https://api.github.com/repos/hashicorp/packer/releases" | jq -r '.[1] | select(.prerelease == false) | .tag_name' | sed 's/^v//')
-          echo "::set-output name=versionPacker::versionPacker=\"$version\""
+          echo "versionPacker=$version" >> $GITHUB_OUTPUT
+
+      - name: Get Latest PowerShell Version
+        id: get-latest-powershell-version
+        run: |
+          version=$(curl -s "https://api.github.com/repos/PowerShell/PowerShell/releases" | jq -r '.[1] | select(.prerelease == false) | .tag_name' | sed 's/^v//')
+          echo "versionPowershell=$version" >> $GITHUB_OUTPUT
+
+      - name: Get Latest Vault Version
+        id: get-latest-vault-version
+        run: |
+          version=$(curl -s https://api.github.com/repos/hashicorp/vault/releases/latest | jq -r '.tag_name' | cut -c 2-)
+          echo "versionVault=$version" >> $GITHUB_OUTPUT
+
+      - name: Get Latest Azure DevOps Agent Version
+        id: get-latest-azdo-version
+        run: |
+          version=$(curl -s "https://api.github.com/repos/microsoft/azure-pipelines-agent/releases/latest" | jq -r '.tag_name' | sed 's/^v//')
+          echo "versionAzdo=$version" >> $GITHUB_OUTPUT
 
       - name: Get Latest GitHub Runner Version
         id: get-latest-github-runner-version
         run: |
           version=$(curl -s "https://api.github.com/repos/actions/runner/releases" | jq -r '.[1] | select(.prerelease == false) | .tag_name' | head -n1 | sed 's/^v//')
-          echo "::set-output name=versionGithubRunner::versionGithubRunner=\"$version\""
+          echo "versionGithubRunner=$version" >> $GITHUB_OUTPUT
 
       - name: Update Docker Bake Override HCL File
         run: |
-          versionPowershell=${{ steps.get-latest-powershell-version.outputs.versionPowershell }}
+          versionDockerCompose=${{ steps.get-latest-docker-compose-version.outputs.versionDockerCompose }}
+          versionGolang=${{ steps.get-latest-golang-version.outputs.versionGolang }}
+          versionKubectl=${{ steps.get-latest-versionKubectl-version.outputs.versionKubectl }}
           versionPacker=${{ steps.get-latest-packer-version.outputs.versionPacker }}
+          versionPowershell=${{ steps.get-latest-powershell-version.outputs.versionPowershell }}
+          versionVault=${{ steps.get-latest-vault-version.outputs.versionVault }}
+          versionAzdo=${{ steps.get-latest-azdo-version.outputs.versionAzdo }}
           versionGithubRunner=${{ steps.get-latest-github-runner-version.outputs.versionGithubRunner }}
-          sed -i "s/versionPowershell=\"[^\"]*\"/versionPowershell=\"$versionPowershell\"/g" docker-bake.override.hcl
+
+          sed -i "s/versionDockerCompose=\"[^\"]*\"/versionDockerCompose=\"$versionDockerCompose\"/g" docker-bake.override.hcl
+          sed -i "s/versionGolang=\"[^\"]*\"/versionGolang=\"$versionGolang\"/g" docker-bake.override.hcl
+          sed -i "s/versionKubectl=\"[^\"]*\"/versionKubectl=\"$versionKubectl\"/g" docker-bake.override.hcl
           sed -i "s/versionPacker=\"[^\"]*\"/versionPacker=\"$versionPacker\"/g" docker-bake.override.hcl
+          sed -i "s/versionPowershell=\"[^\"]*\"/versionPowershell=\"$versionPowershell\"/g" docker-bake.override.hcl
+          sed -i "s/versionVault=\"[^\"]*\"/versionVault=\"$versionVault\"/g" docker-bake.override.hcl
+          sed -i "s/versionAzdo=\"[^\"]*\"/versionAzdo=\"$versionAzdo\"/g" docker-bake.override.hcl
           sed -i "s/versionGithubRunner=\"[^\"]*\"/versionGithubRunner=\"$versionGithubRunner\"/g" docker-bake.override.hcl
+          
 
-      - name: Commit Changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add docker-bake.override.hcl
-          git commit -m "Update docker-bake.override.hcl file with latest version"
+      # - name: Commit Changes
+      #   run: |
+      #     git config --local user.email "action@github.com"
+      #     git config --local user.name "GitHub Action"
+      #     git add docker-bake.override.hcl
+      #     git commit -m "Update docker-bake.override.hcl file with latest version"
 
-      # - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v3.12.0
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     commit-message: Update components versions
-      #     branch: update-docker-bake-override-file
-      #     title: Update docker-bake.override.hcl file with latest versions
-      #     body: This pull request updates the `docker-bake.override.hcl` file with the latest PowerShell versions obtained from the GitHub API.
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3.12.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: Update components versions
+          branch: update-docker-bake-override-file
+          title: Update docker-bake.override.hcl file with latest versions
+          body: This pull request updates the `docker-bake.override.hcl` file with the latest PowerShell versions obtained from the GitHub API.
 
