--- a/.github/workflows/update_components.yml
+++ b/.github/workflows/update_components.yml
@@ -1,4 +1,4 @@
-name: Update Docker Bake Override HCL File
+name: Update rover components
 
 on:
   schedule:
@@ -65,6 +65,12 @@ jobs:
           version=$(curl -s "https://api.github.com/repos/actions/runner/releases" | jq -r '.[1] | select(.prerelease == false) | .tag_name' | head -n1 | sed 's/^v//')
           echo "versionGithubRunner=$version" >> $GITHUB_OUTPUT
 
+      - name: Get Latest Terraform Versions
+        id: get-latest-terraform-versions
+        run: |
+          version=$(curl -s https://api.github.com/repos/hashicorp/terraform/releases | jq -r '.[] | select(.draft == false) | .tag_name' | sort -rV | awk -F. '!a[$1"."$2]++{print substr($0,2)}')
+          echo "versionsTerraform::versionsTerraform=\"$version\""
+
       - name: Update Docker Bake Override HCL File
         run: |
           versionDockerCompose=${{ steps.get-latest-docker-compose-version.outputs.versionDockerCompose }}
@@ -84,14 +90,12 @@ jobs:
           sed -i "s/versionVault=\"[^\"]*\"/versionVault=\"$versionVault\"/g" docker-bake.override.hcl
           sed -i "s/versionAzdo=\"[^\"]*\"/versionAzdo=\"$versionAzdo\"/g" docker-bake.override.hcl
           sed -i "s/versionGithubRunner=\"[^\"]*\"/versionGithubRunner=\"$versionGithubRunner\"/g" docker-bake.override.hcl
-          
 
-      # - name: Commit Changes
-      #   run: |
-      #     git config --local user.email "action@github.com"
-      #     git config --local user.name "GitHub Action"
-      #     git add docker-bake.override.hcl
-      #     git commit -m "Update docker-bake.override.hcl file with latest version"
+      - name: Update Terraform versions File
+        run: |
+          versionsTerraform=${{ steps.get-latest-terraform-versions.outputs.versionsTerraform }}
+          echo $versionsTerraform > .env.terraform
+          echo "" >> .env.terraform
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.12.0
