--- a/.github/workflows/update_components.yml
+++ b/.github/workflows/update_components.yml
@@ -69,7 +69,7 @@ jobs:
         id: get-latest-terraform-versions
         run: |
           version=$(curl -s https://api.github.com/repos/hashicorp/terraform/releases | jq -r '.[] | select(.draft == false) | .tag_name' | sort -rV | awk -F. '!a[$1"."$2]++{print substr($0,2)}' | tr '\n' '\r\n')
-          echo "versionsTerraform::versionsTerraform=\"$version\""
+          echo $version > .env.terraform
 
       - name: Update Docker Bake Override HCL File
         run: |
@@ -90,11 +90,6 @@ jobs:
           sed -i "s/versionVault=\"[^\"]*\"/versionVault=\"$versionVault\"/g" docker-bake.override.hcl
           sed -i "s/versionAzdo=\"[^\"]*\"/versionAzdo=\"$versionAzdo\"/g" docker-bake.override.hcl
           sed -i "s/versionGithubRunner=\"[^\"]*\"/versionGithubRunner=\"$versionGithubRunner\"/g" docker-bake.override.hcl
-
-      - name: Update Terraform versions File
-        run: |
-          versionsTerraform=${{ steps.get-latest-terraform-versions.outputs.versionsTerraform }}
-          echo $versionsTerraform > .env.terraform
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.12.0
