--- a/.github/workflows/update_components.yml
+++ b/.github/workflows/update_components.yml
@@ -68,8 +68,8 @@ jobs:
       - name: Update latest Terraform Versions
         id: get-latest-terraform-versions
         run: |
-          version=$(curl -s https://api.github.com/repos/hashicorp/terraform/releases | jq -r '.[] | select(.draft == false) | .tag_name' | sort -rV | awk -F. '!a[$1"."$2]++{print substr($0,2)}' | tr '\n' '\r\n')
-          echo "$version" > .env.terraform
+          version=$(curl -s https://api.github.com/repos/hashicorp/terraform/releases | jq -r '.[] | select(.draft == false) | .tag_name' | sort -rV | awk -F. '!a[$1"."$2]++{print substr($0,2)}')
+          echo "${versions//$'\n'/ }" > .env.terraform
 
       - name: Update Docker Bake Override HCL File
         run: |
