--- a/.github/workflows/update_components.yml
+++ b/.github/workflows/update_components.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install Dependencies
         run: |
@@ -68,8 +68,9 @@ jobs:
       - name: Update latest Terraform Versions
         id: get-latest-terraform-versions
         run: |
-          version=$(curl -s https://api.github.com/repos/hashicorp/terraform/releases | jq -r '.[] | select(.draft == false) | .tag_name' | sort -rV | awk -F. '!a[$1"."$2]++{print substr($0,2)}')
-          echo "${versions//$'\n'/ }" > .env.terraform
+          versionsTerraform=$(curl -s https://api.github.com/repos/hashicorp/terraform/releases | jq -r '.[] | select(.draft == false) | .tag_name' | sort -rV | awk -F. '!a[$1"."$2]++{print substr($0,2)}')
+          echo "${versionsTerraform}" > .env.terraform
+          sed -i '$a\' .env.terraform
 
       - name: Update Docker Bake Override HCL File
         run: |
