--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,14 +10,6 @@
     // The optional 'workspaceFolder' property is the path VS Code should open by default when
     // connected. This is typically a volume mount in .devcontainer/docker-compose.yml
     "workspaceFolder": "/tf/caf",
-    // Use 'settings' to set *default* container specific settings.json values on container create.
-    // You can edit these settings after create using File > Preferences > Settings > Remote.
-    "settings": {
-        "files.eol": "\n",
-        "terminal.integrated.defaultProfile.linux": "zsh",
-        "editor.tabSize": 2,
-        "terminal.integrated.scrollback": 64000,
-    },
     // Uncomment the next line if you want start specific services in your Docker Compose config.
     // "runServices": [],
     // Uncomment this like if you want to keep your containers running after VS Code shuts down.
@@ -27,10 +19,14 @@
     "postCreateCommand": "sudo cp -R /tmp/.ssh-localhost/* ~/.ssh && sudo chown -R $(whoami):$(whoami) /tf/caf ~/.ssh && sudo chmod 400 ~/.ssh/* && git config --global core.editor vi && pre-commit install && pre-commit autoupdate",
     "postStartCommand": "sudo chmod 666 /var/run/docker.sock",
     // Add the IDs of extensions you want installed when the container is created in the array below.
-    "extensions": [
-        "4ops.terraform",
-        "mutantdino.resourcemonitor",
-        "eamodio.gitlens",
-        "golang.go"
-    ]
+    "customizations": {
+        "vscode": {
+            "extensions": [
+				"hashicorp.terraform",
+				"mutantdino.resourcemonitor",
+				"eamodio.gitlens",
+				"GitHub.copilot"
+			]
+        }
+    }
 }
