--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,7 @@ updates:
   directory: "/"
   schedule:
     interval: "daily"
+- package-ecosystem: "devcontainers"
+  directory: "/"
+  schedule:
+    interval: "daily"
