--- a/.github/workflows/rover-actions.yml
+++ b/.github/workflows/rover-actions.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         context: .
         file: ./Dockerfile.roverlight  # Specify the Dockerfile for the roverlight container
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
         push: false
