--- a/.github/workflows/rover-actions.yml
+++ b/.github/workflows/rover-actions.yml
@@ -43,6 +43,8 @@ jobs:
       id: scan
       with:
         image: "roverlight:latest"
+        severity-cutoff: critical
+        fail-build: false
 
     - name: Upload scan SARIF report
       uses: github/codeql-action/upload-sarif@v2
