--- a/.github/workflows/rover-actions.yml
+++ b/.github/workflows/rover-actions.yml
@@ -45,6 +45,7 @@ jobs:
         image: "roverlight:latest"
         severity-cutoff: critical
         fail-build: false
+        output-format: table
 
     - name: Upload scan SARIF report
       uses: github/codeql-action/upload-sarif@v3
