--- a/.github/workflows/rover-actions.yml
+++ b/.github/workflows/rover-actions.yml
@@ -1,4 +1,4 @@
-name: Test Building Rover on PR
+name: Test Building Roverlight on PR
 
 on:
   workflow_dispatch:
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64]
 
     steps:
     - name: Checkout code
@@ -25,13 +28,19 @@ jobs:
         key: ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-buildx-
- 
+    
+    - name: Generate tags
+      id: tag
+      run: echo "date=$(date +'%g%m.%d%H%M')" >> $GITHUB_OUTPUT
+          
     - name: Test Building
       uses: docker/bake-action@v4
       with:
         push: false
         load: true
         targets: roverlight
+        args: date=${{ steps.tag.outputs.date }}
+        platforms: ${{ matrix.platform }}
 
     - name: Scan container
       uses: anchore/scan-action@v3
@@ -41,7 +50,6 @@ jobs:
         severity-cutoff: critical
 
     - name: Upload scan SARIF report
-      if: always()
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
