--- a/.github/workflows/roverlight-build.yml
+++ b/.github/workflows/roverlight-build.yml
@@ -46,7 +46,7 @@ jobs:
       uses: anchore/scan-action@v3
       id: scan
       with:
-        image: "roverlight:latest"
+        image: roverlight:${{ steps.tag.outputs.date }}
         severity-cutoff: critical
 
     - name: Upload scan SARIF report
