--- a/.github/workflows/roverlight-build.yml
+++ b/.github/workflows/roverlight-build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Cache Docker layers
       uses: actions/cache@v4
       with:
-        path: /tmp/.buildx-cache
+        path: ~/.docker/buildx
         key: ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-buildx-
