--- a/.github/workflows/roverlight-build.yml
+++ b/.github/workflows/roverlight-build.yml
@@ -24,9 +24,9 @@ jobs:
       uses: actions/cache@v4
       with:
         path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        key: ${{ runner.os }}-${{ runner.arch }}-buildx-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-
+          ${{ runner.os }}-${{ runner.arch }}-buildx-
     
     - name: Generate tags
       id: tag
