--- a/Dockerfile.roverlight
+++ b/Dockerfile.roverlight
@@ -119,6 +119,8 @@ RUN sudo apt-get update && \
     echo "DISABLE_UNTRACKED_FILES_DIRTY=\"true\"" >> /home/${USERNAME}/.zshrc && \
     echo "alias rover=/tf/rover/rover.sh" >> /home/${USERNAME}/.bashrc && \
     echo "alias rover=/tf/rover/rover.sh" >> /home/${USERNAME}/.zshrc && \
+    echo "alias t=$HOME/.tfenv/bin/terraform" >> /home/${USERNAME}/.bashrc && \
+    echo "alias t=$HOME/.tfenv/bin/terraform" >> /home/${USERNAME}/.zshrc && \
     echo "cd /tf/caf || true" >> /home/${USERNAME}/.bashrc && \
     echo "cd /tf/caf || true" >> /home/${USERNAME}/.zshrc && \
     echo "[ -f /tf/rover/.kubectl_aliases ] && source /tf/rover/.kubectl_aliases" >>  /home/${USERNAME}/.zshrc && \
