--- a/.github/workflows/roverlight-release.yml
+++ b/.github/workflows/roverlight-release.yml
@@ -77,21 +77,21 @@ jobs:
         platforms: ${{ matrix.platform }}
         provenance: false
     
-    - name: Scan container
-      uses: anchore/scan-action@v3
-      id: scan
-      with:
-        image: ghcr.io/${{ github.repository }}/roverlight:latest
-        severity-cutoff: critical
+    # - name: Scan container
+    #   uses: anchore/scan-action@v3
+    #   id: scan
+    #   with:
+    #     image: ghcr.io/${{ github.repository }}/roverlight:latest
+    #     severity-cutoff: critical
 
     # - name: Upload scan SARIF report
     #   uses: github/codeql-action/upload-sarif@v3
     #   with:
     #     sarif_file: ${{ steps.scan.outputs.sarif }}
 
-    - name: Generate artifact attestation
-      uses: actions/attest-build-provenance@v1
-      with:
-        subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-        subject-digest: ${{ steps.push.outputs.digest }}
-        push-to-registry: false
+    # - name: Generate artifact attestation
+    #   uses: actions/attest-build-provenance@v1
+    #   with:
+    #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+    #     subject-digest: ${{ steps.push.outputs.digest }}
+    #     push-to-registry: false
