--- a/.github/workflows/roverlight-release.yml
+++ b/.github/workflows/roverlight-release.yml
@@ -75,19 +75,18 @@ jobs:
         tags: ghcr.io/${{ github.repository }}/roverlight:${{ steps.tag.outputs.date }}, ghcr.io/${{ github.repository }}/roverlight:latest
         labels: ${{ steps.meta.outputs.labels }}
         platforms: ${{ matrix.platform }}
-        provenance: false
     
-    # - name: Scan container
-    #   uses: anchore/scan-action@v3
-    #   id: scan
-    #   with:
-    #     image: ghcr.io/${{ github.repository }}/roverlight:latest
-    #     severity-cutoff: critical
+    - name: Scan container
+      uses: anchore/scan-action@v3
+      id: scan
+      with:
+        image: ghcr.io/${{ github.repository }}/roverlight:${{ steps.tag.outputs.date }}
+        severity-cutoff: critical
 
-    # - name: Upload scan SARIF report
-    #   uses: github/codeql-action/upload-sarif@v3
-    #   with:
-    #     sarif_file: ${{ steps.scan.outputs.sarif }}
+    - name: Upload scan SARIF report
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: ${{ steps.scan.outputs.sarif }}
 
     # - name: Generate artifact attestation
     #   uses: actions/attest-build-provenance@v1
