--- a/.github/workflows/roverlight-release.yml
+++ b/.github/workflows/roverlight-release.yml
@@ -20,6 +20,7 @@ jobs:
       packages: write
       id-token: write
       attestations: write
+      security-events: write
 
     strategy:
       matrix:
